# clean-dupes

./: Makefile.am  README.md  bootstrap  clean-dupes-lib.sh.in  clean-dupes.sh  clean-dupes.sh.in  compare.c  compare.h  configure.ac  find-dupes.c  find.c  find.h  list-file.c  list-file.h
.github/workflows/: build-test.yaml
lib/: Makefile.am  bootstrap  configure.ac  digest.c  digest.h  hash-table.c  hash-table.h  lib.sh  list.c  list.h  log.c  log.h  mem.c  mem.h  mmap.c  mmap.h  thread-pool.c  thread-pool.h  timer.c  timer.h  util.c  util.h  version.sh  work-queue.c  work-queue.h
tests/: build-test.sh  find-test.sh
